--- a/LetzchaatFrontEnd/WebContent/index.html
+++ b/LetzchaatFrontEnd/WebContent/index.html
@@ -10,6 +10,11 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-cookies.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- For CHAT	 -->
+  <script src="lib/js/sockjs.js" type="text/javascript"></script>
+<script src="lib/js/stomp.js" type="text/javascript"></script>
+
+  
  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script src="lib/js/skel.min.js"></script>
@@ -58,6 +63,7 @@
 <script src="l_blog/BlogCommentController.js"></script>
 <script src="l_blog/BlogService.js"></script>
 <script src="l_forum/ForumController.js"></script>
+<script src="l_forum/ForumCommentController.js"></script>
 <script src="l_forum/ForumService.js"></script>
 <script src="l_event/EventController.js"></script>
 <script src="l_event/EventService.js"></script>
@@ -65,6 +71,8 @@
 <script src="l_job/JobService.js"></script>
 <script src="l_friend/FriendController.js"></script>
 <script src="l_friend/FriendService.js"></script>
+<script src="l_chat/ChatController.js"></script>
+<script src="l_chat/ChatService.js"></script>
 
 
 </html>
