--- a/LetzchaatFrontEnd/WebContent/l_blog/abc.html
+++ b/LetzchaatFrontEnd/WebContent/l_blog/abc.html
@@ -34,7 +34,7 @@
 <textarea required ng-model="comment.body"></textarea>
 <button ng-click="addComment()" class="btn btn-primary btn-block">Post Comment</button> -->
 
-	<!-- <nav class="navbar navbar-default">
+	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -124,44 +124,10 @@
 				
 			</div>
 		</div>
-	</nav> -->
+	</nav>
 	
 	
 	
-	
-	<div class="comments" id="comments">
-<a name="comments"></a>
-<h4>
-0
-comments
-                            :
-                          
-</h4>
-<dl class="avatar-comment-indent" id="comments-block">
-<script type="text/javascript">
-                            var CommentsCounter=0;
-                          </script>
-</dl>
-<p class="comment-footer">
-</p><div id="backlinks-container">
-<div id="Blog1_backlinks-container">
-</div>
-</div>
-<div class="comment-form">
-<a name="comment-form"></a>
-<h3 id="comment-post-message">
-<div style=" color:brown; font-weight: bold;">
-                          Give your Valuable Comments
-                        </div>
-</h3>
-<p>
-</p>
-
-<iframe allowtransparency="true" class="blogger-iframe-colorize blogger-comment-from-post" frameborder="0" height="245px" id="comment-editor" name="comment-editor"  width="100%" data-resized="true"></iframe>
-
-</div>
-<p></p>
-</div>
 	
 	
 	
