--- a/LetzchaatFrontEnd/WebContent/l_common/header.html
+++ b/LetzchaatFrontEnd/WebContent/l_common/header.html
@@ -39,7 +39,20 @@
 							</li>
 							
 							<li><a href="twocolumn2.html" >Events</a></li>
-							<li><a href="twocolumn2.html">Jobs</a></li>
+							<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" >Job<span class="caret"></span></a>
+							<ul class="dropdown-menu" ng-controller="JobController as jctrl">
+							<li><a href="#/post_job" >Post Job</a></li>
+							<li ><a href="#/search_job" ng-click="jctrl.fetchAllJobs()"  >Search Job</a></li>
+							<li ><a href="#/view_applied_job" ng-click="jctrl.appliedJobs()" >View Applied Job</a></li>
+							</ul>
+							</li>
+							<li><a href="#/chat" >Chat</a></li>
+							<li class="dropdown" ><a class="dropdown-toggle" data-toggle="dropdown" >Admin<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+							<li><a href="#/manage_users" >Manage Users</a></li>
+							
+							</ul>
+							</li>
 							<li><a href="onecolumn.html" >ContactUs</a></li>
     </ul>
   
