--- a/LetzchaatFrontEnd/WebContent/l_forum/create_forum.html
+++ b/LetzchaatFrontEnd/WebContent/l_forum/create_forum.html
@@ -1,10 +1,10 @@
-<div class="container" ng-app="myApp" ng-controller="ForumController as ctrl">
+<div class="container" ng-app="myApp" ng-controller="ForumController as ctrl" style="position: relative;font-size: 20px;width:100%;">
 
 
 <div ng-show="!loggedIn">
 <div class="alert alert-danger fade in">
       You are not logged in.. Please login &nbsp; <a href="#/login"> here</a>
-        &nbsp; to Create a forum
+        &nbsp; to Create a Forum
          </div>
          
          <div>
