--- a/LetzchaatFrontEnd/WebContent/l_friend/pending_request.html
+++ b/LetzchaatFrontEnd/WebContent/l_friend/pending_request.html
@@ -2,12 +2,10 @@
 <div ng-show="!loggedIn">
 <div class="alert alert-danger fade in">
       You are not logged in.. Please login &nbsp; <a href="#/login"> here</a>
-        &nbsp; to Create a blog
+        &nbsp; to View Pending Friend Request
          </div>
          
-         <div>
-            If you are not  register , you can register <a href="#/registration">here</a>
-            </div>
+         
 
 </div>
 
