--- a/LetzchaatFrontEnd/WebContent/l_friend/search_friend.html
+++ b/LetzchaatFrontEnd/WebContent/l_friend/search_friend.html
@@ -2,7 +2,7 @@
 <div ng-show="!loggedIn">
 <div class="alert alert-danger fade in">
       You are not logged in.. Please login &nbsp; <a href="#/login"> here</a>
-        &nbsp; to Create a blog
+        &nbsp; to Search Friends
          </div>
          
          <div>
