--- a/LetzchaatFrontEnd/WebContent/l_job/view_applied_job.html
+++ b/LetzchaatFrontEnd/WebContent/l_job/view_applied_job.html
@@ -1,8 +1,8 @@
-<div class="container" ng-app="myApp" ng-controller="JobController as ctrl">
+<div class="container" ng-app="myApp" ng-controller="JobController as ctrl" style="position: relative;font-size: 20px;width:100%;">
 <div ng-show="!loggedIn">
 <div class="alert alert-danger fade in">
       You are not logged in.. Please login &nbsp; <a href="#/login"> here</a>
-        &nbsp; to view Friend List
+        &nbsp; to view Applied Jobs
          </div>
          
          <div>
