--- a/LetzchaatFrontEnd/WebContent/index.html
+++ b/LetzchaatFrontEnd/WebContent/index.html
@@ -8,8 +8,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-cookies.min.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+ <!--  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
+ 
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
+ 
   <!-- For CHAT	 -->
   <script src="lib/js/sockjs.js" type="text/javascript"></script>
 <script src="lib/js/stomp.js" type="text/javascript"></script>
@@ -28,7 +33,7 @@
    <!--  <link rel="stylesheet" href="lib/css/bootstrap.min.css"> -->
    <!-- <link rel="stylesheet" href="lib/css/style-desktop.css" /> -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
-   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
    <style >
    
    .nav navbar-nav:hover
@@ -55,6 +60,11 @@
 <div class="container-fluid" style="background-color: #fff ;width:100%; min-height:100%;margin-left:10px;position: relative;"> 
  <div ng-view  ></div>
 </div>
+
+<div class="container-fluid" >
+<div ng-include src="'l_common/footer.html'"></div>
+</div>
+
 </body>
 <script src="app.js"></script>
 <script src="l_user/UserController.js"></script>
