--- a/LetzchaatFrontEnd/WebContent/l_blog/create_blog.html
+++ b/LetzchaatFrontEnd/WebContent/l_blog/create_blog.html
@@ -1,10 +1,10 @@
-<div class="container" ng-app="myApp" ng-controller="BlogController as ctrl">
+<div class="container" ng-app="myApp" ng-controller="BlogController as ctrl" style="position: relative;font-size: 20px;width:100%;">
 
 
 <div ng-show="!loggedIn">
 <div class="alert alert-danger fade in" >
       You are not logged in.. Please login &nbsp; <a href="#/login"> here</a>
-        &nbsp; to Create a blog
+        &nbsp; to Create a Blog
          </div>
          
          <div>
