--- a/LetzchaatFrontEnd/WebContent/l_job/search_job.html
+++ b/LetzchaatFrontEnd/WebContent/l_job/search_job.html
@@ -1,6 +1,6 @@
 <div class="container" ng-app="myApp" ng-controller="JobController as ctrl">
 	<div class="row">
-		<h2>Search Job</h2>
+		<!-- <h2>Search Job</h2>
            <div id="custom-search-input">
                             <div class="input-group col-md-6">
                                 <input type="text" class="  search-query form-control" placeholder="Search" ng-model="searchString" />
@@ -11,7 +11,7 @@
                                 </span>
                             </div>
                         </div>
-	</div>
+	</div> -->
 	<div class="center-block" style="font-size: 20px;font:bold;"><h1>Searched Jobs</h1></div>
 	<div ng-repeat="job in AllJobs | filter:searchString"><!-- ng-repeat -->
 	<section class="featured-jobs">
